# hellowords

./: database.py  sentence_manager.py  spider.py  text_file.py
c++/boost_network/data/: words.data
c++/boost_network/include/: log.hpp
c++/boost_network/src/: log.cpp  singleton.cpp  words_manager.cpp
c++/libevent/src/: main.cpp
data/: one.txt  wikiquote.txt
server&client/: CMakeLists.txt
server&client/include/: singleton.hpp  words_manager.hpp
server&client/src/: hello_words_server.cpp
tools/spider/: database.py  sentence_manager.py  spider.py
